After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 703817 - wl_display@1: error 1: invalid method 8, object wl_surface@14
wl_display@1: error 1: invalid method 8, object wl_surface@14
Status: VERIFIED FIXED
Product: gtk+
Classification: Platform
Component: Backend: Wayland
unspecified
Other Linux
: Normal blocker
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-07-08 19:47 UTC by U. Artie Eoff
Modified: 2013-07-09 18:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gdb backtrace gtk3-demo on wayland (10.53 KB, text/plain)
2013-07-08 19:47 UTC, U. Artie Eoff
Details

Description U. Artie Eoff 2013-07-08 19:47:08 UTC
Created attachment 248652 [details]
gdb backtrace gtk3-demo on wayland

gtk3-demo fails to launch/execute on Wayland with the following error:

"(gtk3-demo:30074): Gdk-ERROR **: wl_display@1: error 1: invalid method 8, object wl_surface@14"

See attached gdb backtrace, too.

Software
--------
wayland (master) heads/master-0-g3cff469
fontconfig (master) heads/master-0-gd420e1d
drm (master) heads/master-0-gf8f1f6e
mesa (master) heads/master-0-g1415a18
libxkbcommon (master) heads/master-0-g6f06eb5
pixman (master) heads/master-0-g279bdcd
cairo (master) heads/master-0-g2cc353c
weston (master) heads/master-0-gfa514b4
harfbuzz (master) heads/master-0-g29b596a
glib (master) heads/master-0-g9675bcc
atk (master) ATK_2_9_3-0-gb2edff1
gdk-pixbuf (master) heads/master-0-g1e62b9a
pango (master) heads/master-0-g5441062
at-spi2-core (master) heads/master-0-gd402265
at-spi2-atk (master) heads/master-0-gc191463
gtk+ (master) heads/master-0-geb62084
Comment 1 Rob Bradford 2013-07-09 09:12:38 UTC
Thanks for the report Artie!
Comment 2 Rob Bradford 2013-07-09 09:13:05 UTC
commit 0dbd9dc0a79f4c48f04213d5cf46b1baa215ad7f
Author: Rob Bradford <rob@linux.intel.com>
Date:   Tue Jul 9 10:04:12 2013 +0100

    wayland: request appropriate compositor version to support buffer scale
    
    With the introduction of the use of buffer scaling in ed4fcee4ct we
    must request version 3 of the compositor as that is the version of the
    surface interface that adds this new functionality. See the following
    commit in weston:
    
    commit a85118c1b85df6fbf8f896dca971a5b79a94da71
    Author: Jason Ekstrand <jason@jlekstrand.net>
    Date:   Thu Jun 27 20:17:02 2013 -0500
    
        Use wl_resource_create() for creating resources
    
        This commit sets the version numbers for all added/created objects.  The
        wl_compositor.create_surface implementation was altered to create a surface
        with the same version as the underlying wl_compositor.  Since no other
        "child interfaces" have version greater than 1, they were all hard-coded to
        version 1.
    
        Signed-off-by: Jason Ekstrand <jason@jlekstrand.net>
    
    https://bugzilla.gnome.org/show_bug.cgi?id=703817